<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/limeWhite"
    tools:context=".UI.MainActivity">
    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/headingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">
            <!--    heading edit here -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
<!--                <TextView-->
<!--                    android:textAllCaps="true"-->
<!--                    android:textStyle="bold"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/loginskip"-->
<!--                    android:textColor="#000000"-->
<!--                    android:layout_gravity="right"-->
<!--                    android:gravity="right"-->
<!--                    android:padding="20dp"/>-->
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/vectorImage"
            android:layout_below="@id/headingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--    vector image edit here-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_highfive" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vectorImage">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/account_succesfully_created"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/complete_yout_kyc_to_start_investing_quickly"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/homeButton"
                        android:layout_width="175dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/radius_background"
                        android:text="@string/kyc_response"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/completeKycButton"
                        android:layout_width="175dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/basic_shape"
                        android:text="@string/kyc_response_complete_kyc"
                        android:textColor="#000000" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>